--- a/handla.html
+++ b/handla.html
@@ -50,7 +50,7 @@
         </div>
         <div class="gurkaklass1 bilderpåprodukt">
             <img class="varukorgsbild" src="./riktigagurkaklass1.png" alt="En bild på en gurka klass1">
-            <div>
+            <div class="varukorgstext">
                 <h4>Gurka Klass 1 500g</h4>
                 <h3>9.95:-</h3>
             </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="djungelgurka bilderpåprodukt">
             <img class="varukorgsbild" src="./djungelgurkav.png" alt="En bild på en djungelgurka">
-            <div>
+            <div class="varukorgstext">
                 <h4>Djungel Gurka 100g</h4>
                 <h3>56.32:-</h3>
             </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="barudsgurka bilderpåprodukt">
             <img class="varukorgsbild" src="./barudsgurkav.png" alt="En bild på en barudsgurka">
-            <div>
+            <div class="varukorgstext">
                 <h4>Baruds Gurka 67kg</h4>
                 <h3>2241:-</h3>
             </div>
@@ -80,7 +80,7 @@
         </div>
         <div class="snackgurka bilderpåprodukt">
             <img class="varukorgsbild" src="./snackgurkav.png" alt="En bild på en snackgurka">
-            <div>
+            <div class="varukorgstext">
                 <h4>Snack Gurka 250g</h4>
                 <h3>24.95:-</h3>
             </div>
@@ -90,7 +90,7 @@
         </div>
         <div class="libanesiskgurka bilderpåprodukt">
             <img class="varukorgsbild" src="./vildgurkav.png" alt="En bild på en libanesisk vildgurka">
-            <div>
+            <div class="varukorgstext">
                 <h4>libanesisk Gurka 600g</h4>
                 <h3>63.95:-</h3>
             </div>
@@ -100,7 +100,7 @@
         </div>
         <div class="börjesson bilderpåprodukt">
             <img class="varukorgsbild" src="./Börjessonv.png" alt="En bild på en börjesson">
-            <div>
+            <div class="varukorgstext">
                 <h4>Börjesson 129kg</h4>
                 <h3>21.98/kg</h3>
             </div>
@@ -110,7 +110,7 @@
         </div>
         <div class="ozansdolma bilderpåprodukt">
             <img class="varukorgsbild" src="./ozansdolmav.png" alt="En bild på en ozans dolma">
-            <div>
+            <div class="varukorgstext">
                 <h4>Ozans Dolma 600g</h4>
                 <h3>5.23/kg</h3>
             </div>
@@ -120,7 +120,7 @@
         </div>
         <div class="ruttengurka bilderpåprodukt">
             <img class="varukorgsbild" src="./ruttengurkav.png" alt="En bild på en ruttengurka">
-            <div>
+            <div class="varukorgstext">
                 <h4>Rutten Gurka 400g</h4>
                 <h3>8.88:-</h3>
             </div>
@@ -130,7 +130,7 @@
         </div>
         <div class="salzgurken bilderpåprodukt">
             <img class="varukorgsbild" src="./Salzgurkenv.png" alt="En bild på en salzgurken">
-            <div>
+            <div class="varukorgstext">
                 <h4>Salzgurken 450g</h4>
                 <h3>56.89:-</h3>
             </div>
@@ -140,7 +140,7 @@
         </div>
         <div class="鸭舌头 bilderpåprodukt">
             <img class="varukorgsbild" src="./yst.png" alt="En bild på en 鸭舌头">
-            <div>
+            <div class="varukorgstext">
                 <h4>鸭舌头 800g</h4>
                 <h3>72.37:-</h3>
             </div>
@@ -156,6 +156,12 @@
     </div>
     <h1 class="gkant2">kant</h1>
     <button class="tabortallavaror">Ta bort alla varor</button>
+    <div class="signorlogin">
+        <button class="uselessbuttons">Bli</button>
+        <a href="./Medlem.html"><button class="medlembutton">medlem</button></a>
+        <button class="uselessbuttons">eller</button>
+        <button class="medlembutton">logga in</button>
+    </div>
     <h1 class="gkant3">kant</h1>
     <button class="varukorgbutton">Till Kassan</button>
 </div>
